# crawl4ai-proxyhat

./: README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  compat.yml
examples/: basic.py
src/crawl4ai_proxyhat/: __init__.py  _compat.py  _resolve.py  strategy.py
tests/: test_resolve.py  test_strategy.py
