[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl4ai-proxyhat"
version = "0.1.0"
description = "ProxyHat residential proxies for Crawl4AI — rotation, geo-targeting, and sticky sessions via the proxy rotation strategy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "ProxyHat", email = "support@proxyhat.com" }]
keywords = [
    "crawl4ai",
    "proxy",
    "residential-proxy",
    "proxyhat",
    "web-scraping",
    "web-crawler",
    "rotating-proxy",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = ["proxyhat>=0.2.0"]

[project.urls]
Homepage = "https://proxyhat.com"
Documentation = "https://docs.proxyhat.com"
Repository = "https://github.com/ProxyHatCom/crawl4ai-proxyhat"

[project.optional-dependencies]
# Crawl4AI is optional at install time: the package builds ProxyHat ProxyConfigs
# against its documented API and only needs the real thing to actually crawl.
crawl4ai = ["crawl4ai>=0.5"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4ai_proxyhat"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
